src/test/ui/error-codes/E0195.stderr
error[E0195]: lifetime parameters or bounds on method `bar` do not match the trait declaration
  --> $DIR/E0195.rs:9:11
   |
LL |     fn bar<'a,'b:'a>(x: &'a str, y: &'b str);
   |           ---------- lifetimes in impl do not match this method in trait
...
LL |     fn bar<'a,'b>(x: &'a str, y: &'b str) {
   |           ^^^^^^^ lifetimes do not match method in trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0195`.
